// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`importFromLinuxPerf forks.linux-perf.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13909899999271147,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13909899999271147,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "main (/workdir/forks)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13909899999271147,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5gammav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.0249014999717474,
      "totalWeight": 0.0249014999717474,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5deltav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023014500009594485,
      "totalWeight": 0.0690374999830965,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z4betav (/workdir/forks)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.04688100004568696,
      "totalWeight": 0.04688100004568696,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5alphav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.044301999965682626,
      "totalWeight": 0.044301999965682626,
    },
  ],
  "name": "forks tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 489.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 938.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 939.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.44ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.51ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 3.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 945.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 919.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 988.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 985.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 935.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 970.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 968.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 986.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 935.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 911.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 976.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 952.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 984.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 915.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 981.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 926.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 985.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 952.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 939.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 939.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 988.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 985.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 996.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 933.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 982.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 985.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 950.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 919.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 983.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 935.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 979.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 499.00µs",
  ],
}
`;

exports[`importFromLinuxPerf forks.linux-perf.txt 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.1390899999823887,
      "totalWeight": 0.1390899999823887,
    },
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0.0009860000282060355,
      "totalWeight": 0.003918000002158806,
    },
  ],
  "name": "swapper",
  "stacks": Array [
    "??? ([kernel.kallsyms]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 496.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 13.90ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 507.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 3.48ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 493.50µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 34.50µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 491.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 492.50µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 13.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 472.00µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 499.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 2.49ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 505.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.50ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 504.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 25.19ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 492.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 488.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 414.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 420.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 2.17ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 826.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.22ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 474.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 478.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 502.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 511.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 496.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 485.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 902.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 565.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 560.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 792.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 38.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 609.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 578.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 482.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 469.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 435.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 422.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.21ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 472.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 467.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 990.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 391.50µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 387.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.25ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 476.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 461.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 8.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 496.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 497.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 501.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 505.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.50ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 494.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 498.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 403.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 393.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 54.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.19ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 945.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 513.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 489.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 498.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 502.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 499.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 496.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 996.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 833.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 31.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 613.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 582.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 377.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 381.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 623.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 549.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 509.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 505.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 507.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 494.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 508.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 492.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 509.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 492.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.00ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 7.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 984.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 10.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 443.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 437.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.16ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 2.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 383.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 388.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.23ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 471.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 473.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 513.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 516.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 980.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.02ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 495.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 494.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 502.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 502.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 499.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 497.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 824.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.22ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 477.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 480.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 505.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 506.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 503.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 499.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 483.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 498.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 937.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.11ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 481.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 483.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 503.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 504.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 800.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.24ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 477.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 486.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 433.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 419.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 15.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.17ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 477.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 477.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 506.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 506.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 498.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 494.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 501.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 426.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 426.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.18ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 486.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 489.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 976.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 502.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 500.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 3.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 482.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 467.50µs",
  ],
}
`;

exports[`importFromLinuxPerf forks.linux-perf.txt 3`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.05253200000151992,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.05253200000151992,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "main (/workdir/forks)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.05253200000151992,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z4betav (/workdir/forks)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.022044000070309266,
      "totalWeight": 0.023026500042760745,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5alphav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.029505499958759174,
      "totalWeight": 0.029505499958759174,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0014934999635443091,
      "totalWeight": 0.0014934999635443091,
    },
  ],
  "name": "forks tid: 11",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.50ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.94ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.94ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 932.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 982.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 8.49ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.60ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.94ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 5.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.95ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.01ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 511.00µs",
  ],
}
`;

exports[`importFromLinuxPerf forks.linux-perf.txt 4`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.049998999980743974,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.049998999980743974,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "main (/workdir/forks)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.049998999980743974,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z5alphav (/workdir/forks)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.024442999972961843,
      "totalWeight": 0.0259504999849014,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/forks",
      "key": "_Z4betav (/workdir/forks)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.024048499995842576,
      "totalWeight": 0.024048499995842576,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0015075000119395554,
      "totalWeight": 0.0015075000119395554,
    },
  ],
  "name": "forks tid: 10",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.49ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 937.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 3.86ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.95ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 1.51ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 4.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.49ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 6.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 4.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.96ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 3.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.95ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 518.00µs",
  ],
}
`;

exports[`importFromLinuxPerf forks.linux-perf.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf forks.linux-perf.txt: profileGroup.name 1`] = `"forks.linux-perf.txt"`;

exports[`importFromLinuxPerf one-sample.linux-perf.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "simple-terminat tid: 10",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1",
  ],
}
`;

exports[`importFromLinuxPerf one-sample.linux-perf.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf one-sample.linux-perf.txt: profileGroup.name 1`] = `"simple-terminat tid: 10"`;

exports[`importFromLinuxPerf simple.linux-perf.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0,
      "totalWeight": 1,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 1,
      "totalWeight": 1,
    },
  ],
  "name": "simple-terminat tid: 10",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1",
  ],
}
`;

exports[`importFromLinuxPerf simple.linux-perf.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf simple.linux-perf.txt: profileGroup.name 1`] = `"simple-terminat tid: 10"`;

exports[`importFromLinuxPerf simple-with-header.linux-perf.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13538200000766665,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13538200000766665,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13538200000766665,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023261499911313877,
      "totalWeight": 0.06896450009662658,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.04615200011176057,
      "totalWeight": 0.04615200011176057,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.04411000004620291,
      "totalWeight": 0.04411000004620291,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.021858499938389286,
      "totalWeight": 0.021858499938389286,
    },
  ],
  "name": "simple-terminat tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 494.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 990.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 897.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 979.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 984.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 933.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 958.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.13ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 949.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 969.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 922.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 996.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 972.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 907.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 984.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 952.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 956.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 983.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 962.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 897.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 977.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 924.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 979.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 982.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 996.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 939.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 938.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 2.14ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 989.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 995.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 952.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 930.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 964.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 964.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 933.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 883.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 967.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 996.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 956.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 987.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 964.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 992.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 995.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 957.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 990.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 960.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 944.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 968.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.16ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 988.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 984.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 476.50µs",
  ],
}
`;

exports[`importFromLinuxPerf simple-with-header.linux-perf.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf simple-with-header.linux-perf.txt: profileGroup.name 1`] = `"simple-terminat tid: 9"`;

exports[`importFromLinuxPerf simple-with-pids.linux-perf.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13586300000315532,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13586300000315532,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13586300000315532,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.01918700002715923,
      "totalWeight": 0.06494599996949546,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.05723400003626011,
      "totalWeight": 0.05723400003626011,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.022971499915001914,
      "totalWeight": 0.022971499915001914,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.036470500024734065,
      "totalWeight": 0.036470500024734065,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0005990000208839774,
      "totalWeight": 0.0005990000208839774,
    },
  ],
  "name": "simple-terminat pid: 9 tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 468.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 985.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 995.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 987.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 992.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 993.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 994.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 987.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 911.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 994.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.10ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 967.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 906.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 986.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 902.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 899.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 979.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 992.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 957.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 931.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 988.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 929.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 2.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 981.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 931.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 947.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 948.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 957.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 995.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 940.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.11ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 965.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.15ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 986.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 996.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 923.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 985.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 932.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 906.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 987.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 992.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 923.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.03ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 599.00µs",
  ],
}
`;

exports[`importFromLinuxPerf simple-with-pids.linux-perf.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf simple-with-pids.linux-perf.txt: profileGroup.name 1`] = `"simple-terminat pid: 9 tid: 9"`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.04059999997843988,
      "totalWeight": 0.04059999997843988,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023244000098202378,
      "totalWeight": 0.07264250004664063,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.05354449988226406,
      "totalWeight": 0.05447799988905899,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.01991300002555363,
      "totalWeight": 0.01991300002555363,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0009335000067949295,
      "totalWeight": 0.0009335000067949295,
    },
  ],
  "name": "simple-terminat tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 501.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 996.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 933.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.46ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.47ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 965.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 2.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 925.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 921.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 974.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 922.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 983.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 974.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 932.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 954.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 991.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 981.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 921.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 476.00µs",
  ],
}
`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.1372890000056941,
      "totalWeight": 0.1372890000056941,
    },
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0.0009340000106021762,
      "totalWeight": 0.0014475000207312405,
    },
  ],
  "name": "swapper",
  "stacks": Array [
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 17.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.55ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 487.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 486.00µs",
    "??? ([unknown]);??? ([unknown]) 446.50µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 34.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 38.00µs",
    "??? ([kernel.kallsyms]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 479.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 6.52ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 517.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 111.12ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 399.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 8.13ms",
  ],
}
`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt chunked 1`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/lib/x86_64-linux-gnu/libc-2.27.so",
      "key": "__libc_start_main (/lib/x86_64-linux-gnu/libc-2.27.so)",
      "line": undefined,
      "name": "__libc_start_main",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "main (/workdir/simple-terminates)",
      "line": undefined,
      "name": "main",
      "selfWeight": 0,
      "totalWeight": 0.13823499999125488,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5alphav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5alphav",
      "selfWeight": 0.04059999997843988,
      "totalWeight": 0.04059999997843988,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5deltav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5deltav",
      "selfWeight": 0.023244000098202378,
      "totalWeight": 0.07264250004664063,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z4betav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z4betav",
      "selfWeight": 0.05354449988226406,
      "totalWeight": 0.05447799988905899,
    },
    Frame {
      "col": undefined,
      "file": "/workdir/simple-terminates",
      "key": "_Z5gammav (/workdir/simple-terminates)",
      "line": undefined,
      "name": "_Z5gammav",
      "selfWeight": 0.01991300002555363,
      "totalWeight": 0.01991300002555363,
    },
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.0009335000067949295,
      "totalWeight": 0.0009335000067949295,
    },
  ],
  "name": "simple-terminat tid: 9",
  "stacks": Array [
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 501.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 996.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav;??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 933.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.46ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.47ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.06ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 965.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 2.12ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 925.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 987.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 921.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.08ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 974.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 963.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.04ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 991.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 922.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.02ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.07ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 983.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 974.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.03ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 999.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 932.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 986.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 954.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 991.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.05ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 989.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 998.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1000.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 981.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 921.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 2.09ms",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.01ms",
    "??? ([unknown]);__libc_start_main;main;_Z4betav 999.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5gammav 995.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z5alphav 997.50µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav 1.00ms",
    "??? ([unknown]);__libc_start_main;main;_Z5alphav 980.00µs",
    "??? ([unknown]);__libc_start_main;main;_Z5deltav;_Z4betav 476.00µs",
  ],
}
`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt chunked 2`] = `
Object {
  "frames": Array [
    Frame {
      "col": undefined,
      "file": "[kernel.kallsyms]",
      "key": "[unknown] ([kernel.kallsyms])",
      "line": undefined,
      "name": "??? ([kernel.kallsyms])",
      "selfWeight": 0.1372890000056941,
      "totalWeight": 0.1372890000056941,
    },
    Frame {
      "col": undefined,
      "file": "[unknown]",
      "key": "[unknown] ([unknown])",
      "line": undefined,
      "name": "??? ([unknown])",
      "selfWeight": 0.0009340000106021762,
      "totalWeight": 0.0014475000207312405,
    },
  ],
  "name": "swapper",
  "stacks": Array [
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 17.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 9.55ms",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]) 487.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 486.00µs",
    "??? ([unknown]);??? ([unknown]) 446.50µs",
    "??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 34.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 38.00µs",
    "??? ([kernel.kallsyms]);??? ([unknown]);??? ([unknown]);??? ([unknown]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 479.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 6.52ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 517.00µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 111.12ms",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 399.50µs",
    "??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]);??? ([kernel.kallsyms]) 8.13ms",
  ],
}
`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt chunked: indexToView 1`] = `0`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt chunked: profileGroup.name 1`] = `"system-wide.linux-perf.txt"`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt: indexToView 1`] = `0`;

exports[`importFromLinuxPerf system-wide.linux-perf.txt: profileGroup.name 1`] = `"system-wide.linux-perf.txt"`;
